Category roughed in for NextBilCard. Fixed some positioning and spacing.

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -69,7 +69,7 @@ h6 {
 .main-right-column {
   width: 100%;
   height: 100%;
-  padding: 3% 0;
+  padding: 2% 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -106,13 +106,13 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 200.233px;
+  height: 235px;
 }
 
 .card-buttons {
   display: flex;
   flex-direction: column;
-  height: 136px;
+  height: 170px;
   justify-content: space-between;
   padding: 16px 0;
 }
@@ -201,6 +201,7 @@ option {
 select {
   appearance: none;
   outline: none;
+  padding: 12px 16px;
 }
 
 select option {
@@ -304,7 +305,8 @@ select option {
   flex-direction: column;
 }
 
-.editing input {
+.editing input,
+.editing select {
   padding: 0;
 }
 
